# what-should-i-play

./: Cargo.toml  README.md  config.toml.example  index.html  mobile.html
hltb-api/: Cargo.toml  config.example.toml
hltb-api/src/: main.rs
src/: main.rs
