[package]
name = "hltb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hltb"
path = "src/main.rs"

[dependencies]
wreq = { version = "5", features = ["json"] }
wreq-util = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
urlencoding = "2"
axum = "0.7"
tower = "0.4"
